<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">EWORD</string>
    <string name="title_activity_notification">Vocabulary every day!</string>
    <string name="thongbao_nhacnho">EWORD Vocabulary</string>
    <string name="home">Home</string>
    <string name="action_settings">Setting</string>
    <string name="remembr_you">EWORD miss you!</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="coppyright">© 2020 SUN Studio</string>
    <string name="lb_new_note">Click on the gallery to try the new feature now!</string>
    <string name="bt_tv_home">VOCAB</string>
    <string name="bt_game_home">GAME</string>
    <string name="slogan_home">Learning English vocabulary is easy!</string>
    <string name="bt_st_home">SETTING</string>
    <string name="bt_ab_home">ABOUT</string>
    <string name="bt_db_st">Sync</string>
    <string name="txt_mail_backup">Backup email: (Click here to add)</string>
    <string name="bt_saoluu">Backup</string>
    <string name="txt_other_st">Other settings</string>
    <string name="ck_st_1">Turn on homepage effects</string>
    <string name="ab_if_1">DEVELOPERS\nNguyễn Trung Nhẫn\ntrungnhan21.12@gmail.com\napps.trungnhan.name.vn</string>
    <string name="csbm">Privacy Policy and Terms of Service\nhttps://apps.4it.top/privacy_policy.html</string>
    <string name="slogan_ab">EWORD v1.0.0\n\nLearning English vocabulary is easy!</string>
    <string name="tv_wait_for">Loading library, please wait…</string>
    <string name="title_thuvien">VOCABULARY ONLINE AVAILABLE</string>
    <string name="title_tvfd">EWORD - MANAGE VOCAB FOLDER</string>
    <string name="title_tvfd2">Directory from your sesame:</string>
    <string name="bt_edit">Edit</string>
    <string name="bt_del">Delete</string>
    <string name="bt_add">Add</string>
    <string name="title_view_tv">EWORD - MANAGE VOCAB</string>
    <string name="title_view_tv2">From your sesame:</string>
    <string name="lb_cs1">New word</string>
    <string name="lb_cs2">Meaning of words</string>
    <string name="lb_cs3_hint">Leave blank to automatically translate</string>
    <string name="title_gm">GAMES</string>
    <string name="bt_game_lb1">Practice vocabulary</string>
    <string name="lb_mean_of">The meaning of the word</string>
    <string name="hint_nhapnghia">Enter the meaning here</string>
    <string name="bt_xog">Done</string>
    <string name="bt_game1">Practice vocabulary</string>
    <string name="bt_game2">Practice vocabulary (En-Vi)</string>
    <string name="bt_game2_2">Practice vocabulary (EV)</string>
    <string name="bt_game3">Practice vocabulary (Vi-En)</string>
    <string name="bt_game3_3">Practice vocabulary (VE)</string>
    <string name="bt_game4">Find meaning</string>
    <string name="bt_game4_4">Find meaning</string>
    <string name="bt_game5">Find meaning (En-Vi)</string>
    <string name="bt_game5_5">Find meaning (EV)</string>
    <string name="bt_game6">Find meaning (Vi-En)</string>
    <string name="bt_game6_6">Find meaning (VE)</string>
    <string name="thongbao">NOTIFICATION</string>
    <string name="content_thongbao1">Are you sure you want to sync? Your entire vocabulary will be deleted and replaced with the previous backup!</string>
    <string name="bt_sure">Sure</string>
    <string name="tt_db">Start syncing!</string>
    <string name="tt_db2">Need Internet to sync!</string>
    <string name="tt_db3">Backing up!</string>
    <string name="no_inter_sl">Can not back up, the backup needs an Internet connection!</string>
    <string name="saoluuroi">You\'ve just backed up, you need to make changes to backup again!</string>
    <string name="mail_sl">Backup email:</string>
    <string name="wr_email">Your email is not valid!</string>
    <string name="re_op_st">You need to reopen \'SETTING\' to be able to back up!</string>
    <string name="cancel">Cancel</string>
    <string name="fail_sl">Could not back up!</string>
    <string name="up_bk">Uploading to server ...</string>
    <string name="ok_sl">Backup complete!</string>
    <string name="ok_sl2">Backup complete! Next login time just enter your e-mail and press \'Sync\'</string>
    <string name="cancel_sl">Backup canceled!</string>
    <string name="quyensl">Bạn cần cung cấp quyền này để sao lưu!</string>
    <string name="quyen1">Permission granted to read EWORD backup</string>
    <string name="won_dih">Translation complete, added new words!</string>
    <string name="fail_dich">Automatic translation failed! No meanings found for:</string>
    <string name="hinhnhudaco">seems to have had!</string>
    <string name="tu">Word</string>
    <string name="kobotrong">Not empty or too short!</string>
    <string name="dasuatv">Edited vocabulary!</string>
    <string name="tugiong">This word seems like some word!</string>
    <string name="update">Update</string>
    <string name="edit_tv">EDIT VOCABULARY</string>
    <string name="ccxoa">No word selected to correct</string>
    <string name="daxoatu">The word has been deleted</string>
    <string name="cct">No word selected to delete!</string>
    <string name="no_empt_en">Do not leave the English word blank!</string>
    <string name="canin_dich">Automatic translation requires an Internet connection!</string>
    <string name="dichtudong">Automatic translation, please wait ...!</string>
    <string name="dathemtv">Added new words!</string>
    <string name="dacotu">The word you just added seems to already exist!</string>
    <string name="new_word">ADD A NEW WORD</string>
    <string name="yourword2">Your vocabulary</string>
    <string name="yourword">Your vocabulary (0):</string>
    <string name="motv">Click again to edit this vocabulary!</string>
    <string name="kothetm">Could not create directory</string>
    <string name="dathem_tm">Directory added</string>
    <string name="fd_exits">This directory already exists!</string>
    <string name="daxoatm">Directory deleted</string>
    <string name="no_chsoe_fd">No folders selected for Edit !!</string>
    <string name="no_fd_Ed">Directory name does not exist to edit!</string>
    <string name="sang">to</string>
    <string name="dadoiten">Rename to</string>
    <string name="doiten">Rename</string>
    <string name="name_fd">Directory name</string>
    <string name="lanua">Click again to open the vocabulary folder:</string>
    <string name="tmtv">Vocabulary folder</string>
    <string name="trinhtai">DOWNLOAD</string>
    <string name="fail_dw">Download failed! Please try again!</string>
    <string name="wait_not_res">The server responded too long, automatically to the home page!</string>
    <string name="re_dw">Trying to reload the library ...</string>
    <string name="err_dw">There was an error downloading!</string>
    <string name="re_dw2">Trying to reload…</string>
    <string name="datai">Downloaded \'</string>
    <string name="dangtai">Downloading ...</string>
    <string name="dw">DOWNLOAD</string>
    <string name="dw_2">\'on your device!</string>
    <string name="dw_1">Click DOWNLOAD to save vocabulary set \'</string>
    <string name="tv_on">VOCABULARY LIBRARY ONLINE</string>
    <string name="baotri_tv">The server is under maintenance or has a problem! Unable to load the library at this time! Press BACK on the phone to go back!</string>
    <string name="learn_easy">Learning English vocabulary is easy!</string>
    <string name="youfail">YOU HAVE LOSE!</string>
    <string name="youwin">CONGRATULATIONS ON WINNING!</string>
    <string name="cuocsongma">THAT\'S LIFE!</string>
    <string name="thatbaila">FAILURE IS MOTHER\'S SUCCESS!</string>
    <string name="colen">COME ON!</string>
    <string name="iss"> is </string>
    <string name="gm_wr">You wrong!</string>
    <string name="xuatsac">EXCELLENT!</string>
    <string name="gioiqua">YOU\'RE SO GOOD!</string>
    <string name="dungr">RIGHT!</string>
    <string name="kethuc">END</string>
    <string name="chose_fd">CHOOSE FOLDER WORD</string>
    <string name="it_tv">Sorry, this directory is too few words to play this game \\: \'(</string>
    <string name="cont_ms2">You do not have any vocabulary directory! You need a lot of vocabulary to enter \'GAME\'</string>
    <string name="del_file">Removed old files!</string>
    <string name="ok_db">Already synchronized!</string>
    <string name="err_db">There was an error syncing!</string>
    <string name="sapxog">Almost done ...</string>
    <string name="ck_sl">You do not have any backups to sync!</string>
    <string name="final_bc">Last step…</string>
    <string name="baotri">Server temporary maintenance, backup function is temporarily locked!</string>
    <string name="quyen2">Sorry, you have just declined the permission</string>
    <string name="chuc1">EWORD</string>
    <string name="chuc2">EWORD miss you!</string>
    <string name="ck_st_2">Turn on vocabulary reminders</string>
    <string name="will_nhac">Vocabulary will be reminded every 15 minutes.</string>
    <string name="muonquaylai">We miss you!</string>
    <string name="nhacnho_tv">Learn vocabulary through notifications!</string>
    <string name="bxh_full">Ranking</string>
    <string name="bxh">Rank</string>
    <string name="thuvien">Library</string>
    <string name="rank_week">This week\'s rankings</string>
    <string name="wait_bxh">Loading RANK, please wait…</string>
    <string name="retry_bxh">Trying to download rank again…</string>
    <string name="diem">scores</string>
    <string name="hang">rank</string>
    <string name="rankcuaban">Your rank</string>
    <string name="pass">Password</string>
    <string name="dangnhap">Sign in</string>
    <string name="dangky">Sign up</string>
    <string name="log_title1">Don\'t have an account?</string>
    <string name="bam_reg_txt">Sign up for an account!</string>
    <string name="log_ok">Logged in successfully.\nNext time just click Settings -> Sign out</string>
    <string name="log_fail">Login failed. E-mail or password is incorrect!\nPlease check back!</string>
    <string name="khoitao_dau">First time initialization, please wait…</string>
    <string name="dangxuat">Sign Out</string>
    <string name="out_thanhcong">Logged out!</string>
    <string name="ten_nick">Your name or nickname</string>
    <string name="cotk">Do you already have an account?</string>
    <string name="bam_log">Click here to Sign in!</string>
    <string name="kotontai">This email does not exist, please check it again!</string>
    <string name="loi_log">There was an error logging in, please try again!</string>
    <string name="loi_reg">There was an error sign up, please try again!</string>
    <string name="kohople">Invalid account or password!</string>
    <string name="chacchan_out">If you haven\'t backed up one last time, logging out will cause all old data to be deleted. Are you sure you want to log out?</string>
    <string name="datontai">E-mail or this account already exists!</string>
    <string name="reg_ok">Sign Up Success.</string>
    <string name="hang_koco">not available</string>
    <string name="new_week">New weekly rankings are updating.</string>
    <string name="cach_co_rank">How to get points on the BXH:\n- Win a game every turn 10 scores\n- If you lose, deduct 20 points\n- No Internet connection, no points</string>
    <string name="nhinhinhdoan">See Figure guess letters</string>
    <string name="anh_conghia">This photo means:</string>
    <string name="freeimg">Free Images on Pixabay</string>
    <string name="dala">The answer is</string>
    <string name="nghiala">Mean:</string>
    <string name="canlog">You need to be logged in to use these features!</string>
    <string name="bxh_can">You need to login to use this feature!</string>
</resources>